# sdf-weighted-delaunay

./: .gitignore  CMakeLists.txt  Example.ipynb  README.md  incremental.cpp
src/: IRT.cpp  IRT.hpp
